Fixed the overlap issue of img frame

--- a/css/styles.css
+++ b/css/styles.css
@@ -609,6 +609,7 @@ ul {
 }
 
 .img--frame {
+  width: 100%;
   padding: 11px;
   border: solid 1px lightgrey;
 }
