--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -6,7 +6,7 @@
   }
   &--frame {
     @extend %img;
-
+    width: 100%;
     padding: 11px;
     border:solid 1px lightgrey;
   }
